Plateau-Rover APIs was created
